Removed category from library

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>testng</artifactId>
             <version>6.9.13.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.23.1</version>
+        </dependency>
     </dependencies>
 
 
