--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>leger.joshua</groupId>
+    <groupId>io.joshatron</groupId>
     <artifactId>budget-library</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
@@ -23,7 +23,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>library.App</mainClass>
+                            <mainClass>io.joshatron.budgetlibrary.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
