Migrated to clojure

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-*.idea
-*.iml
-*.csv
-*.CSV
-*.db
-*.bak
-dependency-reduced-pom.xml
-target/
+/target
+/classes
+/checkouts
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+.hgignore
+.hg/
